--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1095,6 +1095,10 @@ select {
   margin-left: auto;
   margin-right: auto;
 }
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
@@ -1116,9 +1120,6 @@ select {
 }
 .-mt-px {
   margin-top: -1px;
-}
-.mb-0 {
-  margin-bottom: 0px;
 }
 .mb-1 {
   margin-bottom: 0.25rem;
@@ -1156,14 +1157,8 @@ select {
 .mb-8 {
   margin-bottom: 2rem;
 }
-.ml-0 {
-  margin-left: 0px;
-}
 .ml-1 {
   margin-left: 0.25rem;
-}
-.ml-10 {
-  margin-left: 2.5rem;
 }
 .ml-12 {
   margin-left: 3rem;
@@ -1191,6 +1186,9 @@ select {
 }
 .mr-3 {
   margin-right: 0.75rem;
+}
+.mr-4 {
+  margin-right: 1rem;
 }
 .mt-1 {
   margin-top: 0.25rem;
@@ -1358,6 +1356,9 @@ select {
   flex-shrink: 0;
 }
 .flex-grow {
+  flex-grow: 1;
+}
+.grow {
   flex-grow: 1;
 }
 .origin-top {
@@ -1610,10 +1611,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
 }
-.bg-orange-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 237 213 / var(--tw-bg-opacity));
-}
 .bg-orange-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(253 186 116 / var(--tw-bg-opacity));
@@ -1773,9 +1770,6 @@ select {
 .pl-3 {
   padding-left: 0.75rem;
 }
-.pr-0 {
-  padding-right: 0px;
-}
 .pr-10 {
   padding-right: 2.5rem;
 }
@@ -1825,6 +1819,10 @@ select {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
 }
 .text-base {
   font-size: 1rem;
@@ -2019,6 +2017,10 @@ select {
 }
 .ring-opacity-5 {
   --tw-ring-opacity: 0.05;
+}
+.blur {
+  --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .grayscale {
   --tw-grayscale: grayscale(100%);
@@ -2718,5 +2720,21 @@ select {
   .xl\:w-1\/4 {
     width: 25%;
   }
+
+  .xl\:w-2\/4 {
+    width: 50%;
+  }
+
+  .xl\:w-3\/4 {
+    width: 75%;
+  }
 }
 
+/* CSS追記 */
+.bg-custom-edebda {
+  background-color: #EDEBDA;
+}
+/* より具体的なセレクタで .bg-custom-edebda のスタイルルールを指定 */
+.container .bg-custom-edebda {
+  background-color: #EDEBDA;
+}
